Fix XPCOM_BREAK_ON_LOAD by restoring pre-string-branch Find() behavior when starting index is negative.  Bug 243429, r+sr=darin